overflow issue fixed

--- a/frontend/src/componets/Chatbox/Chat2.css
+++ b/frontend/src/componets/Chatbox/Chat2.css
@@ -55,7 +55,7 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     justify-content: space-between;
     align-items: center;
     grid-template-columns: 320px 1fr;
-    height: 418px;
+    
     /*  */
     height: calc(100vh - 70px);
     
@@ -146,6 +146,8 @@ button {
     .chat-container {
         display: flex;
         flex-direction: column;
+        height: calc(100vh- 64px);
+
     }
     .left-container {
         width: 100%;
@@ -154,5 +156,13 @@ button {
     }
     .right-container {
         width: 100%;
+    }
+    .chat-history {
+        height: calc(100% - 50%);
+    }
+    .chat_container{
+        /* height: max-content; */
+          flex-grow : 1;
+
     }
 }
